quiz-app-helm/templates/deployment-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: quiz-app-db
  name: quiz-app-db
  namespace: practica
spec:
  volumeClaimTemplates:
  - metadata:
      name: db
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: sv-pv
      resources:
        requests:
          storage: 1Gi
  serviceName: "quiz-app-service"
  replicas: 1
  selector:
    matchLabels:
      app: quiz-app-db
  template:
    metadata:
      labels:
        app: quiz-app-db
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: quiz-app
                namespaces:
                  - "practica"
                topologyKey: kubernetes.io/hostname
              weight: 1
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: quiz-app-db
                namespaces:
                  - "practica"
                topologyKey: kubernetes.io/hostname
              weight: 1
      containers:
      - image: mongo:6.0.3
        volumeMounts:
        - mountPath: /data/db
          name: db
        name: mongo
        resources:
          limits:
            memory: "512Mi"
            cpu: "400m"
        ports:
        - containerPort: 27017
        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe: 
          tcpSocket:
            port: 27017
          initialDelaySeconds: 20
          periodSeconds: 10
